--- a/fbu_ios_twitter_objc-starter-project/twitter/Base.lproj/Main.storyboard
+++ b/fbu_ios_twitter_objc-starter-project/twitter/Base.lproj/Main.storyboard
@@ -717,6 +717,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="JaS-eg-n1t"/>
-        <segue reference="7Nf-mc-Quv"/>
+        <segue reference="dvQ-S4-9H3"/>
     </inferredMetricsTieBreakers>
 </document>
